--- a/app/views/articles/_show_section.html.erb
+++ b/app/views/articles/_show_section.html.erb
@@ -1,4 +1,4 @@
-<section class="album bg-white shadow-sm my-5 px-4 py-4">
+<section class="album bg-white shadow-sm my-3 px-4 py-4" style="border: 1px solid rgba(0, 0, 0, 0.125); border-radius: 0.25rem">
   <div class="container">
     <div class="row">
       <div class="blog-post">
