--- a/app/views/categories/_global_section.html.erb
+++ b/app/views/categories/_global_section.html.erb
@@ -1,11 +1,14 @@
-<section class="jumbotron jumbotron-fluid bp-page mb-0">
+<section class="jumbotron jumbotron-fluid bp-page mb-0" style="position: relative">
   <div class="container">
     <div class="row">
       <div class="col-md-5 offset-md-6 mt-5 text-white">
-        <h1 class="display-4">Kategori</h1>
-        <p class="lead">Pilih kategori yang ingin dipelajari.</p>
+        <h1 class="display-4 font-weight-bold">Kategori</h1>
+        <p class="lead">Kumpulan tutorial berdasarkan topik tertentu.</p>
       </div>
     </div>
+  </div>
+  <div class="pb-5" style="width: 100%">
+    <div class="cloud-img mb-0"></div>
   </div>
 </section>
 
