--- a/app/views/home/_article_section.html.erb
+++ b/app/views/home/_article_section.html.erb
@@ -1,7 +1,7 @@
-<section class="my-4">
+<section class="my-3">
   <div class="container">
-    <h1 class="h2 mb-4 font-weight-bold"><strong>Artikel</strong></h1>
     <div class="row">
+      <% 5.times do %>
       <% @articles.each do |a| %>
         <div class="card mb-3" style="max-width: 800px;">
           <div class="row no-gutters">
@@ -16,6 +16,7 @@
             </div>
           </div>
         </div>
+      <% end %>
       <% end %>
     </div>
     <%= will_paginate @articles, renderer: WillPaginate::ActionView::BootstrapLinkRenderer %>
