--- a/app/views/home/_category_section.html.erb
+++ b/app/views/home/_category_section.html.erb
@@ -1,9 +1,9 @@
-<section class="py-3" id="category">
+<section class="category py-3" id="category" style="z-index: 11000">
   <div class="container">
     <h1 class="h3 my-4 font-weight-bold"><strong>Belajar apa saja?</strong></h1>
     <div class="row">
       <% @categories.each do |c| %>
-        <div class="col-md-2">
+        <div class="col-md-3">
           <%= link_to category_path(c), class: 'text-decoration-none text-secondary' do %>
             <div class="card mb-4 shadow-sm px-3 py-3">
               <%= image_tag("#{c.image_feature}", class: 'bd-placeholder-img card-img-top') %>
