--- a/app/views/home/_newsletter_section.html.erb
+++ b/app/views/home/_newsletter_section.html.erb
@@ -1,14 +1,19 @@
 <section class="jumbotron jumbotron-fluid news-letter mb-0">
   <div class="container">    
     <div class="row">
-      <div class="col-md-12 mt-3 text-light">
-        <h1 class="h2 my-4 font-weight-bold"><strong>Surat kabar</strong></h1>
+      <div class="col-md-12 text-light" style="z-index: 120000">
+        <h1 class="h2 font-weight-bold"><strong>Surat kabar</strong></h1>
         <p class="mt-4">
           Subscribe agar mendapatkan berita terbaru dari kami.
         </p>
         <%= form_for newsletter do |form| %>
           <div class="form-inline">
             <div class="input-group mb-2 mr-2">
+              <div class="input-group-prepend">
+                <span class="input-group-text" id="basic-addon1"><i class="fa fa-user"></i></span>
+              </div>
+              <%= form.text_field :name, class: 'form-control', placeholder: 'Nama' %>
+            </div><div class="input-group mb-2 mr-2">
               <div class="input-group-prepend">
                 <span class="input-group-text" id="basic-addon1"><i class="fa fa-envelope"></i></span>
               </div>
@@ -28,5 +33,8 @@
         </form>
       </div>
     </div>
+  </div>
+  <div class="pb-5">
+    <div class="cloud-img"></div>
   </div>
 </section>
