--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,6 +2,7 @@
   <%= render 'jumbotron_section' %>
   <%= render 'category_section' %>
   <div class="container">
+    <h1 class="h2 mt-3 font-weight-bold"><strong>Artikel</strong></h1>
     <div class="row">
       <div class="col-md-9">
         <%= render 'article_section' %>
