--- a/app/views/layouts/_global_sidebar.html.erb
+++ b/app/views/layouts/_global_sidebar.html.erb
@@ -1,6 +1,6 @@
-<aside class="blog-sidebar text-secondary my-5">
-  <div class="album shadow-sm my-4 py-3" style="background: linear-gradient(to bottom right, #e90000, #8f00ff)">
-    <div class="px-3"><h1 class="h4 text-white font-weight-bold">Surat kabar</h1></div>
+<aside class="blog-sidebar text-secondary my-3">
+  <div class="album shadow-sm mb-4 py-3" style="border: 1px solid rgba(0, 0, 0, 0.125); border-radius: 0.25rem;">
+    <div class="px-3"><h1 class="h4 font-weight-bold">Surat kabar</h1></div>
     <hr class="mx-3" style="background-color: #fff">
     <%= form_for newsletter do |form| %>
       <div class="form-inline px-3">
@@ -21,28 +21,28 @@
     <% end %>
   </div>
 
-  <div class="album bg-white shadow-sm my-4 py-3">
+  <div class="album shadow-sm mb-4 py-3" style="border: 1px solid rgba(0, 0, 0, 0.125); border-radius: 0.25rem;">
     <div class="px-3"><h1 class="h4 font-weight-bold">Artikel terbaru</h1></div>
     <hr class="mx-3" style="background-color: #fff">
     <ul class="list-group mx-3">
       <% recent_articles.each do |r| %>
         <%= link_to article_path(r), class: 'text-decoration-none text-secondary' do %>
-          <li class="list-group-item d-flex justify-content-between align-items-center my-1" style="background: #8f00ff">
-            <span class="text-white"><%= r.title %></span>
+          <li class="list-group-item d-flex justify-content-between align-items-center my-1">
+            <span><%= r.title %></span>
           </li>
         <% end %>
       <% end %>
     </ul>
   </div>
 
-  <div class="album bg-white shadow-sm my-4 py-3">
+  <div class="album shadow-sm mb-4 py-3" style="border: 1px solid rgba(0, 0, 0, 0.125); border-radius: 0.25rem;">
     <div class="px-3"><h1 class="h4 font-weight-bold">Kategori</h1></div>
     <hr class="mx-3">
     <ul class="list-group mx-3">
       <% categories.each do |c| %>
         <%= link_to category_path(c), class: 'text-decoration-none text-secondary' do %>
-          <li class="list-group-item d-flex justify-content-between align-items-center my-1" style="background: #8f00ff">
-            <span class="text-white"><%= c.name %></span>
+          <li class="list-group-item d-flex justify-content-between align-items-center my-1">
+            <span><%= c.name %></span>
             <span class="badge badge-danger badge-pill"><%= c.articles.count %></span>
           </li>
         <% end %>
