--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
 <%= display_meta_tags %>
 
 <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-<%= stylesheet_link_tag    'https://fonts.googleapis.com/css?family=Quicksand&display=swap' %>
+<%= stylesheet_link_tag    'https://fonts.googleapis.com/css?family=Roboto&display=swap' %>
 <%= stylesheet_link_tag    'https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.css' %>
 <%= stylesheet_link_tag    'https://cdn.datatables.net/1.10.20/css/dataTables.bootstrap4.min.css' %>
 <%= stylesheet_link_tag    'https://cdn.datatables.net/responsive/2.2.3/css/responsive.bootstrap4.min.css' %>
@@ -55,12 +55,12 @@ console.log(sent_to_subscribers.value);
 
 <style>
 * {
-font-family: 'Quicksand', sans-serif;
+font-family: 'Roboto', sans-serif;
 }
 </style>
 </head>
 
-<body style="background-color: #f3f3f3;">
+<body>
 <% if devise_controller? == false %>
   <%= render 'layouts/header' %>
 <% end %>
@@ -74,7 +74,7 @@ font-family: 'Quicksand', sans-serif;
 <% end %>
 
 <div class="fixed-bottom" style="left: auto">
-<%= link_to "#home", class: "btn btn-dark page-scroll m-4 backToTop" do %>
+  <%= link_to "#home", class: "btn page-scroll m-4 backToTop", style: 'background: linear-gradient(to right bottom, #5800e7, #e90000);border-radius: 50%' do %>
 <i class="fas fa-arrow-up text-white"></i>
 <% end %>
 </div>
