fix privacy policy views

--- a/app/views/privacy_policy/_index_section.html.erb
+++ b/app/views/privacy_policy/_index_section.html.erb
@@ -1,4 +1,4 @@
-<section class="album py-3 bg-white my-5 px-4 py-4 shadow-sm">
+<section class="album bg-white shadow-sm my-3 px-4 py-4" style="border: 1px solid rgba(0, 0, 0, 0.125); border-radius: 0.25rem">
   <div class="container">
     <div class="row">
       <h3 style="text-align: justify;">Kebijakan Privasi</h3>
