--- a/app/views/articles/_index_section.html.erb
+++ b/app/views/articles/_index_section.html.erb
@@ -8,16 +8,11 @@
         <% @articles.each do |a| %>
           <div class="col-md-3">
             <%= link_to article_path(a), class: 'text-decoration-none text-secondary' do %>
-              <div class="card my-3 shadow-sm">
+              <div class="card h-100 my-3 shadow-sm">
                 <%= image_tag("#{a.image_feature}", class: 'card-img-top') %>
                 <div class="card-body">
-                  <h5 class="h3 font-weight-bold card-title"><%= a.title.titleize %></h5>
-                </div>
-                <div class="card-footer">
-                  <small class="text-muted"><i class="fas fa-clock"></i> <%= time_ago_in_words(a.created_at).capitalize %></small></br>
-                  <small class="text-muted"><i class="fas fa-user-edit"></i> <%= a.user.name %></small></br>
-                  <small class="text-muted"><i class="fas fa-eye"></i> <%= a.hits %> kali dilihat</small>
-                  
+                  <small class="text-muted my-5"><%= time_ago_in_words(a.created_at).capitalize %></small>
+                  <h5 class="card-title"><%= a.title %></h5>
                 </div>
               </div>
             <% end %>
