--- a/app/views/categories/_index_section.html.erb
+++ b/app/views/categories/_index_section.html.erb
@@ -1,4 +1,4 @@
-<section class="my-5 px-4">
+<section class="my-5">
   <div class="container">
     <% if user_signed_in? %>
       <%= link_to 'New Category', new_category_path, class: 'btn btn-primary btn-sm' %>
