--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,6 +1,9 @@
 <main class="shadow-sm">
   <%= render 'global_section' %>
   <div class="container">
+    <div class="col-md-12">
+      <h1 class="h4"><strong class="text-dark">Kategori : <%= @category.name %></strong></h1>
+    </div>
     <div class="row">
       <div class="col-md-9">
         <%= render 'show_section' %>
