--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -22,7 +22,6 @@
             </div>
           <% end %>
 
-
           <div class="form-group">
             <%= form.label :title %>
             <%= form.text_field :title, class: 'form-control' %>
@@ -40,6 +39,12 @@
                 <%= form.select("category_id", Category.all.collect {|c| [ c.name, c.id ] }, { include_blank: '- Pilih kategori -' }, class: 'custom-select mr-sm-2', id: 'inlineFormCustomSelect') %>
               </div>
             </div>
+          </div>
+
+          <div class="form-group">
+            <%= form.label :tag %><br>
+            <small>Pisahkan dengan tanda koma ( , )</small>
+            <%= form.text_field :all_tags, class: 'form-control' %>
           </div>
 
           <div class="form-group">
