--- a/app/views/categories/_index_section.html.erb
+++ b/app/views/categories/_index_section.html.erb
@@ -8,20 +8,20 @@
 
         <div class="col-md-3">
           <%= link_to category_path(c), class: 'text-decoration-none text-secondary' do %>
-            <div class="card mb-4 shadow-sm px-3 py-3 my-3">
-              <%= image_tag("#{c.image_feature}", class: 'bd-placeholder-img card-img-top') %>
+            <div class="card h-100 shadow-sm">
+              <%= image_tag("#{c.image_feature}", class: 'card-img-top') %>
               <h1 class="h4 text-center mt-3"><%= c.name.titleize %></h1>
               <small class="font-weight-bold text-center">(<%= c.articles.count %> Tulisan)</small>
-            </div>
-          <% end %>
-          <% if user_signed_in? %>
-            <%= link_to edit_category_path(c), class: 'btn btn-warning btn-sm', data: {toggle: 'tooltip', placement: 'top', title: 'Edit'} do %>
-              <i class="fas fa-edit text-white"></i>
-            <% end %>
+              <% if user_signed_in? %>
+                <%= link_to edit_category_path(c), class: 'btn btn-warning btn-sm', data: {toggle: 'tooltip', placement: 'top', title: 'Edit'} do %>
+                  <i class="fas fa-edit text-white"></i>
+                <% end %>
 
-            <%= link_to category_path(c), method: :delete, class: 'btn btn-danger btn-sm', data: {confirm: 'Apakah anda yakin akan menghapus?', toggle: 'tooltip', placement: 'top', title: 'Hapus'} do %>
-              <i class="fas fa-trash text-white"></i>
-            <% end %>
+                <%= link_to category_path(c), method: :delete, class: 'btn btn-danger btn-sm', data: {confirm: 'Apakah anda yakin akan menghapus?', toggle: 'tooltip', placement: 'top', title: 'Hapus'} do %>
+                  <i class="fas fa-trash text-white"></i>
+                <% end %>
+              <% end %>
+            </div>
           <% end %>
         </div>
       <% end %>
