--- a/app/views/pages/_category_home.html.erb
+++ b/app/views/pages/_category_home.html.erb
@@ -5,7 +5,7 @@
       <% @categories.each do |c| %>
         <div class="col-md-3">
           <%= link_to category_path(c), class: 'text-decoration-none text-secondary' do %>
-            <div class="card mb-4 shadow-sm px-3 py-3">
+            <div class="card h-100 mb-4 shadow-sm px-3 py-3">
               <%= image_tag("#{c.image_feature}", class: 'bd-placeholder-img card-img-top') %>
               <h1 class="h4 text-center mt-3"><%= c.name %></h1>
               <small class="font-weight-bold text-center">(<%= c.articles.count %> Tulisan)</small>
@@ -14,6 +14,6 @@
         </div>
       <% end %>
     </div>
-    <%= link_to 'Selengkapnya...', categories_path, class: 'btn text-white font-weight-bold', style: 'background: linear-gradient(90deg,#5800e7,#e90000)' %>
+    <%= link_to 'Selengkapnya...', categories_path, class: 'btn text-white font-weight-bold mt-3', style: 'background: linear-gradient(90deg,#5800e7,#e90000)' %>
   </div>
 </section>
