--- a/app/views/pages/privacy_policy.html.erb
+++ b/app/views/pages/privacy_policy.html.erb
@@ -3,7 +3,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-9">
-        <%= render 'index_privacy_policy' %>
+        <%= render '../views/pages/privacy_policy/index_section' %>
       </div>
       <div class="col-md-3">
         <%= render 'layouts/global_sidebar' %>
