--- a/app/views/pages/terms.html.erb
+++ b/app/views/pages/terms.html.erb
@@ -3,7 +3,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-9">
-        <%= render 'index_terms' %>
+        <%= render '../views/pages/terms/index_section' %>
       </div>
       <div class="col-md-3">
         <%= render 'layouts/global_sidebar' %>
