--- a/app/views/pages/home/_jumbotron_section.html.erb
+++ b/app/views/pages/home/_jumbotron_section.html.erb
@@ -1,12 +1,12 @@
 <section class="jumbotron jumbotron-fluid bp-home mb-0">
   <div class="container mt-5">
     <div class="row">
-      <div class="col-md-8 offset-md-2 mt-5 text-white text-center" style="z-index: 120000">
+      <div class="col-md-8 offset-md-2 mt-5 text-white text-center" style="z-index: 3">
         <h1 class="display-4 font-weight-bold">Bukan Programmer</h1>
         <p class="lead">Belajar programming untuk investasi masa depan.</p>
-        <hr class="my-4" style="background-color: #fff;width: 65%;">
-        <p>Cara terbaik belajar programming adalah dengan memulainya.</p>
-        <a class="btn btn-outline-light btn-lg btn-rounded page-scroll" href="#category" role="button" style="z-index: 1300000">Belajar Sekarang!</a>
+        <hr class="my-4 jumbotron-hr" style="background-color: #fff;width: 60%;">
+        <p class="jumbotron-sm">Cara terbaik belajar programming adalah dengan memulainya.</p>
+        <a class="btn btn-outline-light btn-lg btn-rounded page-scroll" href="#category" role="button">Belajar Sekarang!</a>
       </div>
     </div>
   </div>
