--- a/app/views/articles/_index_section.html.erb
+++ b/app/views/articles/_index_section.html.erb
@@ -6,13 +6,19 @@
     <div class="row">
       <% if @articles.count > 0 %>
         <% @articles.each do |a| %>
-          <div class="col-md-3">
+          <div class="col-md-3 mt-3">
             <%= link_to article_path(a), class: 'text-decoration-none text-secondary' do %>
-              <div class="card h-100 my-3 shadow-sm">
+              <div class="card h-100 shadow-sm">
                 <%= image_tag("#{a.image_feature}", class: 'card-img-top') %>
                 <div class="card-body">
                   <small class="text-muted my-5"><%= time_ago_in_words(a.created_at).capitalize %></small>
                   <h5 class="card-title"><%= a.title %></h5>
+                </div>
+                <div class="card-footer">
+                  <small>
+                    <i class="fas fa-folder"></i> <%= a.category.name %><br>
+                    <i class="fas fa-tags"></i> <%= a.all_tags %>
+                  </small>
                 </div>
               </div>
             <% end %>
