--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -3,6 +3,17 @@
   <div class="container">
     <div class="col-md-12">
       <h1 class="h4"><strong class="text-dark">Kategori : <%= @category.name %></strong></h1>
+
+      <% if user_signed_in? %>
+        <%= link_to category_path(@category), class: 'btn btn-primary btn-sm', data: {toggle: 'tooltip', placement: 'top', title: 'Edit'} do %>
+          <i class="fas fa-edit"></i>
+        <% end %>
+
+        <%= link_to category_path(@category), method: :delete, class: 'btn btn-danger btn-sm', data: {confirm: 'Apakah anda yakin ingin menghapus category ini?', toggle: 'tooltip', placement: 'top', title: 'Hapus'} do %>
+          <i class="fas fa-trash"></i>
+        <% end %>
+      <% end %>
+
     </div>
     <div class="row">
       <div class="col-md-9">
