fix pages views

--- a/app/views/pages/home/_category_section.html.erb
+++ b/app/views/pages/home/_category_section.html.erb
@@ -5,10 +5,9 @@
       <% @categories.each do |c| %>
         <div class="col-md-3">
           <%= link_to category_path(c), class: 'text-decoration-none text-secondary' do %>
-            <div class="card h-100 mb-4 shadow-sm px-3 py-3">
-              <%= image_tag("#{c.image_feature}", class: 'bd-placeholder-img card-img-top') %>
-              <h1 class="h4 text-center mt-3"><%= c.name %></h1>
-              <small class="font-weight-bold text-center">(<%= c.articles.count %> Tulisan)</small>
+            <div class="card h-100 mb-4 shadow-sm">
+              <%= image_tag("#{c.image_feature}", class: 'img-fluid bd-placeholder-img card-img-top') %>
+              <h1 class="h4 text-center"><%= c.name %></h1>
             </div>
           <% end %>
         </div>
