--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -5,7 +5,7 @@
       <h1 class="h4"><strong class="text-dark">Kategori : <%= @category.name %></strong></h1>
 
       <% if user_signed_in? %>
-        <%= link_to category_path(@category), class: 'btn btn-primary btn-sm', data: {toggle: 'tooltip', placement: 'top', title: 'Edit'} do %>
+        <%= link_to edit_category_path(@category), class: 'btn btn-primary btn-sm', data: {toggle: 'tooltip', placement: 'top', title: 'Edit'} do %>
           <i class="fas fa-edit"></i>
         <% end %>
 
