--- a/app/views/articles/_index_section.html.erb
+++ b/app/views/articles/_index_section.html.erb
@@ -16,7 +16,7 @@
                 </div>
                 <div class="card-footer">
                   <small>
-                    <i class="fas fa-folder"></i> <%= a.category.name %><br>
+                    <i class="fas fa-folder-open"></i> <%= a.category.name %><br>
                     <i class="fas fa-tags"></i> <%= a.all_tags %>
                   </small>
                 </div>
