--- a/app/views/articles/_show_section.html.erb
+++ b/app/views/articles/_show_section.html.erb
@@ -15,13 +15,19 @@
         </p>
 
         <p class="blog-post-meta">
-          <i class="fas fa-eye"></i> <%= @article.hits %> kali dilihat
+          <i class="fas fa-tags"></i> <%= @article.all_tags %>
+
+          <span class="mx-2">~</span>
+
+          <i class="fas fa-folder-open"></i> <%= @article.category.name %>
+
+          <span class="mx-2">~</span>
+
+          <i class="fas fa-eye"></i> <%= @article.hits %> kali
+
         </p>
 
-        <p class="blog-post-meta">
-          <i class="fas fa-folder-open"></i> <%= @article.category.name %> | <i class="fas fa-tags"></i> <%= @article.all_tags %>
-        </p>
-
+        
         <% if user_signed_in? %>
           <%= link_to edit_article_path(@article), class: 'btn btn-warning btn-sm', data: {toggle: 'tooltip', placement: 'top', title: 'Edit'} do %>
             <i class="fas fa-edit text-white"></i>
