fix categories views

--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -23,8 +23,8 @@
           </div>
 
           <div class="form-group">
-            <%= form.label :image_feature %>
-            <%= form.file_field :image_feature, class: 'form-control-file' %>
+            <%= form.label :image %>
+            <%= form.file_field :image, class: 'form-control-file' %>
           </div>
 
           <div class="form-group">
