--- a/app/views/pages/home/_article_section.html.erb
+++ b/app/views/pages/home/_article_section.html.erb
@@ -6,7 +6,7 @@
           <div class="card mb-3 p-2" style="max-width: 800px;">
             <div class="row no-gutters">
               <div class="col-md-4">
-                <%= image_tag("#{a.image_feature}", class: 'card-img') %>
+                <%= image_tag(a.image, class: 'card-img') %>
               </div>
               <div class="col-md-8">
                 <div class="card-body">
