--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,7 @@
 <meta charset="utf-8">
 <%= csrf_meta_tags %>
 <%= csp_meta_tag %>
+<%= favicon_link_tag "bp-favicon" %>
 <%= display_meta_tags %>
 
 <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
