--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -27,9 +27,15 @@
             <%= form.text_field :title, class: 'form-control' %>
           </div>
 
+
           <div class="form-group">
             <%= form.label :content %>
-            <%= form.text_area :content, class: 'form-control', rows:20 %>
+            <%= form.text_area :content, class: 'form-control', id: 'content', rows:20 %>
+          </div>
+
+          <div class="form-group">
+            <%= form.label :description %>
+            <%= form.text_area :description, class: 'form-control' %>
           </div>
 
           <div class="form-group">
