change newsletter background color

--- a/app/assets/stylesheets/bp-style.scss
+++ b/app/assets/stylesheets/bp-style.scss
@@ -54,7 +54,7 @@ section.bp-home {
 }
 
 section.news-letter {
-  background-color: #8f00ff;
+  background: linear-gradient(60deg,#8f00ff,#e90000);
   position: relative;
 }
 
