fix article views

--- a/app/views/articles/_disquss.html.erb
+++ b/app/views/articles/_disquss.html.erb
@@ -3,19 +3,9 @@
     <div class="row">
       <div class="col-md-12">
         <div class="blog-post">
-          <h1 class="blog-post-title h3 font-weight-bold">Komentar pada <%= @article.title %></h1>
+          <h1 class="blog-post-title h4">Komentar</h1>
           <div id="disqus_thread"></div>
           <script>
-
-          /**
-          *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-          *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
-          /*
-          var disqus_config = function () {
-          this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
-          this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-          };
-          */
           (function() { // DON'T EDIT BELOW THIS LINE
           var d = document, s = d.createElement('script');
           s.src = 'https://bukan-programmer.disqus.com/embed.js';
