--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -4,6 +4,7 @@
     <div class="row">
       <div class="col-md-9">
         <%= render 'show_section' %>
+        <%= render 'share' %>
         <%= render 'disquss' %>
       </div>
       <div class="col-md-3">
