fix layout views

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -57,6 +57,10 @@
           <i class="fab fa-github h4"><span class="h5"> Github</span></i>
         <% end %>
 
+        <%= link_to "https://www.youtube.com/channel/UCC1_MFfUcsixD9CaXZ-B1jw", class: 'mx-3', target: :_blank do %>
+          <i class="fab fa-youtube h4"><span class="h5"> Youtube</span></i>
+        <% end %>
+
       </form>
     </div>
   </nav>
