--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,6 +49,7 @@
     font-family: 'Roboto', sans-serif;
   }
 </style>
+<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5e16a9104844e7db"></script>
 </head>
 
 <body>
