--- a/app/views/pages/home/_newsletter_section.html.erb
+++ b/app/views/pages/home/_newsletter_section.html.erb
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-md-12 text-light" style="z-index: 120000">
         <h1 class="h2 font-weight-bold"><strong>Surat kabar</strong></h1>
-        <p class="mt-4">
+        <p class="mt-3">
           Subscribe agar mendapatkan berita terbaru dari kami.
         </p>
         <%= form_for newsletter do |form| %>
@@ -22,13 +22,15 @@
             <%= form.submit 'Subscribe', class: 'btn btn-danger mb-2', :onclick=>"if(!confirm('Apakah anda yakin akan mendaftarkan email ini sebagai subscriber?')){return false;}" %>
           </div>
         <% end %>
-        <p class="mt-4">
-          Atau follow kami melalui:
+        <p class="mt-3">
+        Ikuti juga perkembangan terbaru kami di :
         </p>
         <form class="form-inline">
-          <!-- <a class="text&#45;danger h2" href=""><i class="fab fa&#45;youtube"></i></a> -->
-          <%= link_to 'https://github.com/bukanprogrammer', class: 'text-dark h2 ml-2', target: :_blank do %>
-            <i class="fab fa-github"></i>
+          <%= link_to 'https://github.com/bukanprogrammer', class: 'text-dark h3', target: :_blank do %>
+            <i class="fab fa-github"> <span class="h5">Github</span></i>
+          <% end %>
+          <%= link_to 'https://www.youtube.com/channel/UCC1_MFfUcsixD9CaXZ-B1jw', class: 'text-danger h3 ml-4', target: :_blank do %>
+            <i class="fab fa-youtube"> <span class="h5">Youtube</span></i>
           <% end %>
         </form>
       </div>
