--- a/app/views/articles/_share.html.erb
+++ b/app/views/articles/_share.html.erb
@@ -4,7 +4,7 @@
       <div class="col-md-12">
         <div class="blog-post">
           <h1 class="blog-post-title h4">Share</h1>
-            <div class="addthis_inline_share_toolbox"></div>
+            <div class="addthis_inline_share_toolbox" id="addthis_inline_share_toolbox"></div>
         </div>
       </div>
     </div>
