--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -3,6 +3,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12">
+        <%= render 'layouts/adsense_horizontal' %>
         <%= render 'index_section' %>
       </div>
     </div>
