--- a/app/views/pages/home/_article_section.html.erb
+++ b/app/views/pages/home/_article_section.html.erb
@@ -10,7 +10,7 @@
               </div>
               <div class="col-md-8">
                 <div class="card-body">
-                  <h5 class="card-title"><%= a.title.titleize %></h5>
+                  <h5 class="card-title"><%= a.title %></h5>
                   <p class="card-text"><small class="text-muted"><%= time_ago_in_words(a.created_at).capitalize %></small></p>
                 </div>
               </div>
