--- a/app/views/pages/terms.html.erb
+++ b/app/views/pages/terms.html.erb
@@ -2,11 +2,9 @@
   <%= render 'global_section' %>
   <div class="container">
     <div class="row">
-      <div class="col-md-9">
+      <div class="col-md-10 offset-md-1">
+        <%= render 'layouts/adsense_horizontal' %>
         <%= render '../views/pages/terms/index_section' %>
-      </div>
-      <div class="col-md-3">
-        <%= render 'layouts/global_sidebar' %>
       </div>
     </div>
   </div>
