add google adsense to article

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -3,6 +3,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-9">
+        <%= render 'layouts/adsense_horizontal' %>
         <%= render 'show_section' %>
         <%= render 'share' %>
         <%= render 'disquss' %>
