add google adsense to categories

--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -17,9 +17,11 @@
     </div>
     <div class="row">
       <div class="col-md-9">
+        <%= render 'layouts/adsense_horizontal' %>
         <%= render 'show_section' %>
       </div>
       <div class="col-md-3">
+        <%= render 'layouts/adsense_vertical' %>
         <%= render 'layouts/global_sidebar' %>
       </div>
     </div>
