--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,6 +44,8 @@
   }
 </script>
 
+<script data-ad-client="ca-pub-4614521464561737" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+
 <style>
   * {
     font-family: 'Roboto', sans-serif;
